--- a/CSS-Basics/basics-excercises/exercise-1/index.html
+++ b/CSS-Basics/basics-excercises/exercise-1/index.html
@@ -10,7 +10,10 @@
     p{
         background-color: green;
         font-size: 18px;
-        color: white;
+   background-image: linear-gradient(to right, #833ab4, #fd1d1d,#fcb045);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
     }
   </style>
 </head>
